align h2 skills fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -773,7 +773,7 @@ main .skills ul li svg:hover{
 
     main .skills{
         padding: 40px 0;
-        text-align: start;
+        text-align: center;
     }
 
     main .skills h2{
@@ -789,7 +789,7 @@ main .skills ul li svg:hover{
         row-gap: 40px;
         flex-wrap: wrap;
         margin-top: 60px;
-        justify-content: flex-start;
+        justify-content: center;
     }
 
     main .skills .container-skills ul{
